--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">bingo</string>
-    <string name="iniciar_nueva_partida">Iniciar nueva partida</string>
+    <string name="iniciar_nueva_partida">nueva partida</string>
     <string name="nueva_bola">Nueva Bola</string>
     <string name="empezar">Empezar</string>
     <string name="linia">Línia</string>
@@ -19,5 +19,8 @@
     <string name="linia_correcta">La Línia es correcta?</string>
     <string name="si">si</string>
     <string name="no">no</string>
+    <string name="nueva_partida1">Nueva Partida</string>
+    <string name="manual">Manual</string>
+    <string name="automatico">Automático</string>
 
 </resources>
