--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,7 @@
     <string name="nueva_partida1">Nueva Partida</string>
     <string name="manual">Manual</string>
     <string name="automatico">Automático</string>
+    <string name="bombo_lleno">Bombo lleno</string>
+
 
 </resources>
