--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,9 @@
     <string name="manual">Manual</string>
     <string name="automatico">Automático</string>
     <string name="bombo_lleno">Bombo lleno</string>
+    <string name="linia_con_premio">Linia\n%.1f</string>
+    <string name="bingo_con_premio">Bingo\n%.1f</string>
+
 
 
 </resources>
