corregido imagen menu en medias <3

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">bingo</string>
+    <string name="app_name">Bingo Bombo</string>
     <string name="iniciar_nueva_partida">nueva partida</string>
     <string name="nueva_bola">Nueva Bola</string>
     <string name="empezar">Empezar</string>
